--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
               <div className="bg-white rounded-[2.5rem] p-6 lg:p-8 overflow-hidden">
                 <div className="relative rounded-[2rem] overflow-hidden aspect-[16/9] group">
                    <img 
-                     src="https://images.unsplash.com/photo-1513364776144-60967b0f800f?q=80&w=2200&auto=format&fit=crop"
+                     src="1.jpg"
                      alt="Vidde Surrealist Line Art" 
                      className="w-full h-full object-cover transition-transform duration-1000 group-hover:scale-105 grayscale contrast-125 mix-blend-multiply"
                    />
@@ -730,7 +730,7 @@
                        {/* Story 1 - Clean Minimal */}
                        <div className="aspect-[9/16] bg-brand-beige rounded-[2.5rem] relative overflow-hidden group">
                           <img 
-                            src="https://images.unsplash.com/photo-1552664730-d307ca884978?q=80&w=800&auto=format&fit=crop"
+                            src="2.jpg"
                             className="absolute inset-0 w-full h-full object-cover grayscale opacity-20 mix-blend-multiply"
                             alt="Workshop"
                           />
@@ -763,7 +763,7 @@
                        {/* Story 3 - High Converting Split */}
                        <div className="aspect-[9/16] bg-brand-light rounded-[2.5rem] relative overflow-hidden group flex flex-col">
                            <div className="h-[60%] bg-brand-slate relative">
-                               <img src="https://images.unsplash.com/photo-1531482615713-2afd69097998?q=80&w=800&auto=format&fit=crop" className="w-full h-full object-cover opacity-80 mix-blend-overlay" alt="Woman" />
+                               <img src="components/3.jpg" alt="Woman" />
                                <div className="absolute inset-0 flex items-center justify-center">
                                    <h3 className="text-white text-4xl font-serif text-center px-8">"Kunnskap er ferskvare."</h3>
                                </div>
@@ -849,7 +849,7 @@
                            </p>
                            <div className="flex items-center gap-5">
                                <div className="w-14 h-14 rounded-full bg-brand-light overflow-hidden">
-                                   <img src="https://images.unsplash.com/photo-1580489944761-15a19d654956?q=80&w=200&auto=format&fit=crop" className="w-full h-full object-cover" alt="User" />
+                                   <img src="components/4.jpg" className="w-full h-full object-cover" alt="User" />
                                </div>
                                <div>
                                    <div className="font-bold text-brand-dark text-sm tracking-wide">Anna Olsen</div>
@@ -860,7 +860,7 @@
 
                        {/* Story 9: Behind scenes (Authentic) */}
                        <div className="aspect-[9/16] bg-brand-dark rounded-[2.5rem] relative overflow-hidden group">
-                           <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?q=80&w=800&auto=format&fit=crop" className="absolute inset-0 w-full h-full object-cover opacity-80" alt="Team" />
+                           <img src="components/5.jpg" className="absolute inset-0 w-full h-full object-cover opacity-80" alt="Team" />
                            <div className="absolute inset-0 bg-gradient-to-t from-black via-transparent to-transparent"></div>
                            <div className="absolute bottom-0 left-0 w-full p-10">
                                <div className="bg-white/10 backdrop-blur-md px-4 py-2 rounded-full text-[10px] font-bold tracking-widest text-white inline-block mb-6">BAK FASADEN</div>
@@ -885,7 +885,7 @@
                        {/* Feed 1 - The "Hook" */}
                        <div className="aspect-square bg-brand-dark rounded-[2.5rem] relative overflow-hidden group">
                           <img 
-                            src="https://images.unsplash.com/photo-1542744173-8e7e53415bb0?q=80&w=1000&auto=format&fit=crop"
+                            src="6.jpg"
                             className="absolute inset-0 w-full h-full object-cover opacity-60 grayscale"
                             alt="Meeting"
                           />
@@ -922,7 +922,7 @@
 
                        {/* Feed 4: Minimal Photo w/ Tag */}
                        <div className="aspect-square bg-gray-100 rounded-[2.5rem] relative overflow-hidden group">
-                           <img src="https://images.unsplash.com/photo-1497366216548-37526070297c?q=80&w=1000&auto=format&fit=crop" className="w-full h-full object-cover" alt="Office" />
+                           <img src="components/1.jpg" className="w-full h-full object-cover" alt="Office" />
                            <div className="absolute top-8 right-8">
                                <span className="bg-white/90 backdrop-blur-md px-5 py-2.5 rounded-full font-bold text-brand-dark text-[10px] tracking-widest uppercase">Nytt kontor</span>
                            </div>
@@ -939,7 +939,7 @@
 
                        {/* Feed 6: Team/People (Warmth) */}
                        <div className="aspect-square bg-brand-brown rounded-[2.5rem] relative overflow-hidden group">
-                           <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?q=80&w=800&auto=format&fit=crop" className="w-full h-full object-cover opacity-80" alt="Man" />
+                           <img src="components/2.jpg" className="w-full h-full object-cover opacity-80" alt="Man" />
                            <div className="absolute bottom-6 left-6 right-6 bg-white/[0.1] backdrop-blur-xl p-6 rounded-3xl">
                                <p className="font-bold text-white text-[10px] uppercase tracking-widest mb-1">Møt teamet</p>
                                <h3 className="font-serif text-white text-2xl">Pål, Seniorrådgiver</h3>
@@ -967,7 +967,7 @@
                        {/* Feed 9: Workshop (Active) */}
                        <div className="aspect-square bg-white rounded-[2.5rem] relative overflow-hidden group p-2">
                            <div className="w-full h-full rounded-[2rem] overflow-hidden relative">
-                               <img src="https://images.unsplash.com/photo-1531403009284-440f080d1e12?q=80&w=1000&auto=format&fit=crop" className="w-full h-full object-cover grayscale" alt="Hands" />
+                               <img src="components/3.jpg" className="w-full h-full object-cover grayscale" alt="Hands" />
                                <div className="absolute inset-0 bg-brand-gold/90 mix-blend-multiply"></div>
                                <div className="absolute inset-0 flex items-center justify-center">
                                    <h3 className="text-white font-serif text-4xl italic">Workshops</h3>
@@ -990,7 +990,7 @@
                        <div className="aspect-[1.91/1] bg-white rounded-[2.5rem] relative overflow-hidden group flex">
                           <div className="w-[40%] bg-brand-slate relative overflow-hidden">
                              <img 
-                               src="https://images.unsplash.com/photo-1551836022-d5d88e9218df?q=80&w=800&auto=format&fit=crop" 
+                               src="4.jpg" 
                                className="w-full h-full object-cover mix-blend-overlay opacity-60 grayscale" 
                                alt="Office"
                              />
@@ -1057,7 +1057,7 @@
 
                        {/* Link 7: Video Thumbnail */}
                        <div className="aspect-[1.91/1] bg-brand-slate rounded-[2.5rem] relative overflow-hidden group">
-                           <img src="https://images.unsplash.com/photo-1531482615713-2afd69097998?q=80&w=800&auto=format&fit=crop" className="w-full h-full object-cover opacity-40 mix-blend-multiply" alt="Video" />
+                           <img src="components/5.jpg" className="w-full h-full object-cover opacity-40 mix-blend-multiply" alt="Video" />
                            <div className="absolute inset-0 flex items-center justify-center">
                                <div className="w-20 h-20 bg-white/20 backdrop-blur-md rounded-full flex items-center justify-center hover:scale-110 transition-transform cursor-pointer">
                                    <svg className="w-8 h-8 text-white ml-1" fill="currentColor" viewBox="0 0 24 24"><path d="M8 5v14l11-7z"/></svg>
@@ -1096,7 +1096,7 @@
                        {/* Portrait 1 - Speaker Card (Glass) */}
                        <div className="aspect-[4/5] bg-brand-slate rounded-[2.5rem] relative overflow-hidden group">
                            <img 
-                             src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?q=80&w=800&auto=format&fit=crop"
+                             src="6.jpg"
                              className="absolute inset-0 w-full h-full object-cover grayscale opacity-80 mix-blend-multiply"
                              alt="Speaker"
                            />
@@ -1203,7 +1203,7 @@
 
                        {/* Portrait 8: Atmosphere (Mood) */}
                        <div className="aspect-[4/5] bg-brand-slate rounded-[2.5rem] relative overflow-hidden group">
-                           <img src="https://images.unsplash.com/photo-1511578314322-379afb476865?q=80&w=800&auto=format&fit=crop" className="w-full h-full object-cover mix-blend-overlay opacity-30" alt="Event" />
+                           <img src="components/1.jpg" className="w-full h-full object-cover mix-blend-overlay opacity-30" alt="Event" />
                            <div className="absolute inset-0 flex flex-col items-center justify-center p-8 text-center">
                                <div className="w-px h-20 bg-white/30 mb-8"></div>
                                <h3 className="text-5xl font-serif text-white mb-4">Julebord<br/>2026</h3>
@@ -1214,7 +1214,7 @@
 
                        {/* Portrait 9: Quote on Image (Classic) */}
                        <div className="aspect-[4/5] bg-brand-dark rounded-[2.5rem] relative overflow-hidden group">
-                           <img src="https://images.unsplash.com/photo-1507679799987-c73779587ccf?q=80&w=800&auto=format&fit=crop" className="w-full h-full object-cover opacity-60 grayscale" alt="Man" />
+                           <img src="components/1.jpg" className="w-full h-full object-cover opacity-60 grayscale" alt="Man" />
                            <div className="absolute bottom-12 left-10 right-10 text-white">
                                <p className="font-serif text-3xl leading-tight mb-8">"Investeringen i de ansatte ga umiddelbar avkastning."</p>
                                <div className="flex items-center gap-4">
