--- a/index.html
+++ b/index.html
@@ -1214,9 +1214,7 @@
                 <div className="bg-brand-beige rounded-[2.5rem] p-12 flex flex-col justify-between min-h-[500px] group relative overflow-hidden cursor-default">
                    <div className="relative z-10">
                       <div className="flex items-center gap-4 mb-8">
-                        <div className="p-3 bg-white rounded-2xl">
-                          <svg className="w-6 h-6 text-[#C43E1C]" fill="currentColor" viewBox="0 0 24 24"><path d="M2.5 0C1.12 0 0 1.12 0 2.5v19C0 22.88 1.12 24 2.5 24h19c1.38 0 2.5-1.12 2.5-2.5v-19C24 1.12 22.88 0 21.5 0h-19zm2.5 16h6v2h-6v-2zm0-4h10v2h-10v-2zm0-4h14v2h-14v-2z" opacity="0.3"/><path d="M21.5 0H14v24h7.5c1.38 0 2.5-1.12 2.5-2.5v-19C24 1.12 22.88 0 21.5 0z" opacity="0.1"/><path d="M12 11h2v2h-2v-2zm-2-2h2v2h-2v-2zm-2 0h2v2H8V9zm4 4h2v2h-2v-2zm-2 0h2v2h-2v-2zm-2 0h2v2H8v-2zm4 4h2v2h-2v-2zm-2 0h2v2h-2v-2zm-2 0h2v2H8v-2z" fill="#C43E1C"/></svg>
-                        </div>
+                        <div className="p-3 bg-white rounded-2xl"></div>
                         <h3 className="text-2xl font-medium tracking-tight">PowerPoint</h3>
                       </div>
                       
@@ -1235,9 +1233,7 @@
                 <div className="bg-brand-light rounded-[2.5rem] p-12 flex flex-col justify-between min-h-[500px] group relative overflow-hidden cursor-default">
                    <div className="relative z-10">
                       <div className="flex items-center gap-4 mb-8">
-                        <div className="p-3 bg-white rounded-2xl">
-                          <svg className="w-6 h-6 text-[#2B579A]" fill="currentColor" viewBox="0 0 24 24"><path d="M21.5 0h-19C1.12 0 0 1.12 0 2.5v19C0 22.88 1.12 24 2.5 24h19c1.38 0 2.5-1.12 2.5-2.5v-19C24 1.12 22.88 0 21.5 0z" fill="#2B579A"/><path d="M6.5 19.5L8.75 6h2.5l1.75 10.5L14.75 6h2.5l2.25 13.5h-2.5l-1.25-9-1.75 9h-2.5l-1.75-9-1.25 9h-2.5z" fill="#FFFFFF"/></svg>
-                        </div>
+                        <div className="p-3 bg-white rounded-2xl"></div>
                         <h3 className="text-2xl font-medium tracking-tight">Word</h3>
                       </div>
 
