--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 
 
 
-
+<div class="py-12 lg:py-20">
       <h3 className="text-2xl mt-10 font-medium mb-8 tracking-tight">Glyph</h3>
          <img src="2.svg" alt="" />
               <div className="grid grid-cols-2 md:grid-cols-4 gap-8 mt-10 hidden hide">
@@ -497,7 +497,7 @@
                  </div>
 
               </div>
-              <div className="mt-12 bg-white rounded-3xl p-12">
+              <div className="mt-12 bg-brand-light rounded-3xl p-12">
                  <div className="flex flex-col md:flex-row gap-12 items-start">
                    <div className="flex-1">
                      <h3 className="text-2xl font-medium mb-4 tracking-tight">Konseptet</h3>
@@ -508,9 +508,9 @@
    
                  </div>
               </div>
-
+</div>
                    <h3 className="text-2xl mt-10 font-medium mb-8 tracking-tight">Dot - symboliserer kunnskap</h3>
-         <img src="1.svg" alt="" />
+         <img src="1.svg" alt="" class=" pb-12 lg:pb-20" />
 
 
                             <a href="vidde-logo-glyph-dot.zip" role="button" aria-label="Last ned Last ned logo og glyph" class="mt-8 bg-brand-light  rounded-[2.5rem] p-10 hover:-translate-y-2 transition-all duration-500 ease-[cubic-bezier(0.23,1,0.32,1)] flex flex-col justify-between h-72 group"><div class="flex justify-between items-start"><div class="flex gap-2"><span class="px-4 py-1.5 rounded-full text-[10px] font-bold tracking-widest bg-brand-gold text-black">ZIP</span></div><svg class="w-8 h-8 text-brand-slate opacity-20 group-hover:text-brand-dark group-hover:opacity-100 transition-all" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true" focusable="false"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"></path></svg></div><div><h4 class="text-3xl font-medium mb-2 tracking-tight group-hover:text-brand-gold transition-colors">Last ned logo og glyph</h4><p class="text-brand-slate text-sm font-mono ">12 MB</p></div></a>
